package behavioral.observer.ti_gia;

public interface TheoDoiTiGia {
    void capNhat(float delta);
}
