@startuml
'https://plantuml.com/class-diagram

class TiGia {
    + void dangKy(TheoDoiTiGia ndt)
    + void huyDangKy(TheoDoiTiGia ndt)
    + void thongBao(float delta)
}

interface TheoDoiTiGia {
    + void capNhat(float delta)
}

abstract class NhaDauTu {
    + void dangKy()
    + void huyDangKy()
}

class NhaDauTuA
class NhaDauTuB


NhaDauTu <|-- NhaDauTuA
NhaDauTu <|-- NhaDauTuB

TheoDoiTiGia <|.. NhaDauTu
TiGia o--> TheoDoiTiGia : "*" ndts
NhaDauTu --> TiGia : tigia


@enduml